# place

./: .gitignore  Cargo.toml  README.md  holochain_version.nix  package.json  tsconfig.json
.github/workflows/: build-dna.yml  build-electron.yml  build-webhapps.yml  release.yml  test.yml
crates/zome/: Cargo.toml
crates/zome/src/: constants.rs  double_pixel.rs  lib.rs  path_kind.rs  properties.rs  publish_snapshot.rs  utils.rs
crates/zome/src/callbacks/: init.rs
crates/zome/src/entries/: mod.rs  placement.rs  rendering.rs  snapshot.rs
crates/zome/src/functions/: get_author_rank.rs  get_local_snapshots.rs  get_placement_author.rs  get_placements.rs  get_placements_at.rs  get_properties.rs  get_publishers_at.rs  get_rendering.rs  get_snapshot.rs  get_snapshot_at.rs  mod.rs  place_pixel.rs  publish_latest_snapshot.rs  publish_next_snapshot_at.rs  render_canvas.rs
dna/workdir/: dna.yaml  happ.yaml
dna/workdir_dashboard/: dna.yaml  happ.yaml
dna/zomes/place/: Cargo.toml
dna/zomes/place/src/: lib.rs  publish_snapshot.rs
dna/zomes/place/src/callbacks/: init.rs
dna/zomes/place/src/functions/: get_author_rank.rs  get_local_snapshots.rs  get_placement_author.rs  get_placements_at.rs  get_publishers_at.rs  get_snapshot_at.rs  mod.rs  place_pixel.rs  publish_next_snapshot_at.rs  publish_same_snapshot_upto.rs
dna/zomes/place_dashboard/: Cargo.toml
dna/zomes/place_dashboard/src/: functions.rs  lib.rs
dna/zomes/place_dashboard_integrity/: Cargo.toml
dna/zomes/place_dashboard_integrity/src/: lib.rs
dna/zomes/place_integrity/: Cargo.toml
dna/zomes/place_integrity/src/: lib.rs
dna/zomes/place_model/: Cargo.toml
dna/zomes/place_model/src/: double_pixel.rs  get_properties.rs  lib.rs  placement.rs  snapshot.rs  validation.rs
electron/: .gitignore  afterSignHook.js  package.json  tsconfig.json
electron/src/: constants.ts  holochain.ts  index.ts  init.ts  logger.ts  preload.js
electron/web/: splashscreen.html
scripts/: build.sh  clean-npm.sh  clean.sh  copy-binaries.sh  download-hash-zome.sh  gen-host-agent.sh  hash_zome.sh  install-hc-tools.sh  install-submodules.sh  pack-dna.sh  pack-happ.bat  pack-happ.sh  ts-bindings.sh  update-version-number.sh  write-zome-hash.sh
ui/apps/place/: index.html  package.json  rollup.config.js
ui/apps/place-chaperone/: index.html  package.json  rollup.config.js  web-dev-server.config.mjs
ui/apps/place-chaperone/src/: place-app.ts
ui/apps/place/src/: index.ts  place-app.ts
ui/lib/: package.json
ui/lib/src/: constants.ts  imageBuffer.ts  index.ts  pixel.ts  place.service.ts  place.store.ts  types.ts
ui/lib/src/elements/: place-controller.ts
we-applet/: index.html  package.json  rollup.config.js  web-dev-server.config.mjs
we-applet/demo/: index.html
we-applet/src/: applet-view.ts  createPlaceApplet.ts  cross-applet-view.ts  index.ts  place-applet.ts
we-applet/webhapp.workdir/: web-happ.yaml
we-applet/workdir/: dna.yaml  happ.yaml  web-happ.yaml
webapp/: index.html  package.json  rollup.config.js  tsconfig.json  web-dev-server.config.mjs
webapp-chaperone/: .gitignore  package.json  rollup.config.js  web-dev-server.config.mjs
webapp-chaperone/src/: place-app.ts
webapp/src/: globals.ts  index.ts  place-app.ts
webapp/webhapp.workdir/: web-happ.yaml
webcomponents/: package.json
webcomponents/src/: index.ts  sharedStyles.ts  time.ts
webcomponents/src/bindings/: place-dashboard.fn.ts  place-dashboard.proxy.ts  place-dashboard.ts  place-dashboard.types.ts  place.fn.ts  place.proxy.ts  place.ts  place.types.ts
webcomponents/src/elements/: place-controller.ts  place-dashboard.ts  place-page.ts
webcomponents/src/viewModel/: happDef.ts  place-dashboard.dvm.ts  place-dashboard.perspective.ts  place-dashboard.zvm.ts  place.dvm.ts  place.perspective.ts  place.zvm.ts
workdir/: dna.yaml  happ.yaml  web-happ.yaml
zomes/place/: Cargo.toml
zomes/place/src/: lib.rs  link_kind.rs  publish_snapshot.rs  utils.rs
zomes/place/src/callbacks/: init.rs
zomes/place/src/entries/: mod.rs  snapshot.rs
zomes/place/src/functions/: get_author_rank.rs  get_local_snapshots.rs  get_placement_author.rs  get_placements_at.rs  get_properties.rs  get_publishers_at.rs  get_snapshot_at.rs  mod.rs  place_pixel.rs  publish_next_snapshot_at.rs  publish_same_snapshot_upto.rs
zomes/place_model/: Cargo.toml
zomes/place_model/src/: double_pixel.rs  get_properties.rs  lib.rs  placement.rs  properties.rs  snapshot.rs  validation.rs
