[workspace]
resolver = "2"
members = [
  #"crates/types",
  "zomes/place_model",
  "zomes/place",
  #"sweettest",
]

[profile.dev]
lto = false
opt-level = 0
overflow-checks = false


[profile.release]
opt-level = "z"
lto = true # link time optimization

[profile.release.build-override]
opt-level = "z"
