[workspace]
resolver = "2"
members = [
  "dna/zomes/place_model",
  "dna/zomes/place_integrity",
  "dna/zomes/place",
  "dna/zomes/place_dashboard_integrity",
  "dna/zomes/place_dashboard",
]

[workspace.package]
version = "0.2.0"
rust-version = "1.65.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "=1.0.163", default-features = false }
hdi = { version = "=0.3.2", default-features = false }
hdk = { version = "=0.2.2", default-features = false }
zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-2.2" }
place_model = { path = "./dna/zomes/place_model" }


[profile.dev]
lto = false
opt-level = 0
overflow-checks = false


[profile.release]
opt-level = "z"
lto = true # link time optimization

[profile.release.build-override]
opt-level = "z"
