[package]
name = "zome_place"
version = "0.0.1"
edition = "2021"

[lib]
name = "zome_place"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = { version = "1.0", default-features = false }
strum = "0.19"
strum_macros = "0.19"
enum-ordinalize =  "3.1"
bincode = "1.3"

hdk = { version = "0.0.138", default-features = false }
holo_hash = { version = "0.0.29", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "138" }

place_model = { path = "../place_model" }