[package]
name = "zome_place"
version = "0.0.1"
edition = "2021"

[lib]
name = "zome_place"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = { version = "1.0", default-features = false }
#chrono = "=0.4.6"

hdk = { version = "0.0.154", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "154" }

place_model = { path = "../place_model" }
