[package]
name = "place_dashboard"
version.workspace = true
edition.workspace = true

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde.workspace = true
hdk.workspace = true
zome_utils.workspace = true

place_model.workspace = true
place_dashboard_integrity = {path="../place_dashboard_integrity"}